; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/backlight/extr_backlight.c_backlight_enable.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/backlight/extr_backlight.c_backlight_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@backlight_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [18 x i8] c"backlight enable\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @backlight_enable() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 0), align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %14

4:                                                ; preds = %0
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 0), align 4
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 1), align 4
  %6 = icmp eq i32 %5, 1
  br i1 %6, label %7, label %8

7:                                                ; preds = %4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 2), align 4
  br label %8

8:                                                ; preds = %7, %4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 1), align 4
  %10 = call i32 @eeconfig_update_backlight(i32 %9)
  %11 = call i32 @dprintf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @backlight_config, i32 0, i32 2), align 4
  %13 = call i32 @backlight_set(i32 %12)
  br label %14

14:                                               ; preds = %8, %3
  ret void
}

declare dso_local i32 @eeconfig_update_backlight(i32) #1

declare dso_local i32 @dprintf(i8*) #1

declare dso_local i32 @backlight_set(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
